--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -1063,8 +1063,7 @@ prior1 <- c(
   
   brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0),
 
-  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1),
-  brms::set_prior("cauchy(0, 10)", class = "sigma", lb = 0)
+  brms::set_prior("cauchy(0, 5)", class = "ar", lb = -1, ub = 1)
 )
 
 
@@ -1124,10 +1123,6 @@ hypothesis(is_reactance, "pressure_self_cw > pushing_self_cw")
 
 ```
 
-
-```{r compare react mods}
-loo_compare(loo_reactance, loo_reactance_ordinal, loo_is_reactance)
-```
 
 
 # Report All Models
