--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -52,7 +52,7 @@ options(
   brms.backend = 'cmdstan',
   brms.file_refit = ifelse(use_mi, 'never', 'on_change'),
   brms.file_refit = 'on_change',
-  brms.file_refit = 'always',
+  #brms.file_refit = 'always',
   error = function() beepr::beep(sound = 5)
 )
 
