Added cmdstan path to experimental file

--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -19,6 +19,9 @@ output:
 
 knitr::opts_chunk$set(echo = TRUE)
 
+cmdstanr::set_cmdstan_path(path = "C:/Users/kueng/.cmdstan/cmdstan-2.35.0")
+
+
 library(tidyverse)
 library(R.utils)
 library(wbCorr)
