--- a/00Experimental.Rmd
+++ b/00Experimental.Rmd
@@ -616,13 +616,16 @@ formula <- bf(
     (persuasion_self_cw + persuasion_partner_cw +
     pressure_self_cw + pressure_partner_cw +
     pushing_self_cw + pushing_partner_cw | coupleID)
-  , autocor = ~ cosy(time = day, gr = coupleID:userID)
+  #, autocor = ~ cosy(time = day, gr = coupleID:userID)
 )
 
 
 prior1 <- c(
   brms::set_prior("normal(0, 2.5)", class = "b"),
-  brms::set_prior("normal(4, 2)", class = "Intercept"), # for non-zero PA
+  brms::set_prior("normal(2, 2)", class = "Intercept"), # for day to day MVPA
+  brms::set_prior("normal(4, 2)", class = "Intercept", dpar = "mu2"),
+  brms::set_prior("beta(2, 8)", class = "theta"),
+
   #brms::set_prior("normal(6, 2.5)", class = "Intercept", dpar = 'hu'), # hurdle part
   
   brms::set_prior("normal(0, 2)", class = "sd", group = "coupleID", lb = 0), # Random effects SD for couple
@@ -643,9 +646,9 @@ pa_obj_log <- my_brm(
   imputed_data = implist,
   
   formula = formula, 
-  prior = prior1,
+  #prior = prior1,
   data = df_double, 
-  family = brms::lognormal(),
+  family = brms::mixture(lognormal(), lognormal()),
   #control = list(adapt_delta = 0.95),
   iter = iterations,
   chains = 4,
@@ -677,6 +680,8 @@ summarize_brms(
   exponentiate = T,
   include_p_direction = T) %>%
   print_df(rows_to_pack = rows_to_pack)
+
+summary(pa_obj_log)
 
 ```
 
@@ -756,7 +761,7 @@ mood <- my_brm(
 
 ```{r check_mood, warning=FALSE}
 
-check_brms(mood, log_pp_check = TRUE)
+check_brms(mood, log_pp_check = FALSE)
 
 ```
 
@@ -783,6 +788,8 @@ summarize_brms(
 
 range(df_double$reactance, na.rm = T) 
 hist(df_double$reactance, breaks = 6)
+
+hist(log(df_double$reactance + 0.0000001))
 
 ```
 
@@ -940,8 +947,8 @@ prior1 <- c(
   #brms::set_prior("normal(0, 0.3)", class = "ma", lb = -1, ub = 1), # moving average prior
   brms::set_prior("normal(0, 0.3)", class = "cosy", lb = -1, ub = 1), # compound symmetry prior
   
-  brms::set_prior("normal(0.1,2)", class = "sderr", lb = 0),
-  brms::set_prior("normal(0.1,2)", class = "sigma", lb = 0) 
+  brms::set_prior("normal(0.1,2)", class = "sderr", lb = 0)
+  #, brms::set_prior("normal(0.1,2)", class = "sigma", lb = 0) 
 )
 
 
@@ -972,7 +979,7 @@ reactance_ordinal <- my_brm(
 
 ```{r check_reactance_ordinal, warning=FALSE}
 
-check_brms(reactance_ordinal, log_pp_check = TRUE)
+check_brms(reactance_ordinal)
 
 
 ```
@@ -1048,8 +1055,8 @@ prior1 <- c(
   #brms::set_prior("normal(0, 0.3)", class = "ma", lb = -1, ub = 1), # moving average prior
   brms::set_prior("normal(0, 0.3)", class = "cosy", lb = -1, ub = 1), # compound symmetry prior
   
-  brms::set_prior("normal(0.1,2)", class = "sderr", lb = 0),
-  brms::set_prior("normal(0.1,2)", class = "sigma", lb = 0) 
+  brms::set_prior("normal(0.1,2)", class = "sderr", lb = 0)
+  #,brms::set_prior("normal(0.1,2)", class = "sigma", lb = 0) 
 )
 
 
@@ -1077,7 +1084,7 @@ is_reactance <- my_brm(
 
 ```{r check_is_reactance, warning=FALSE}
 
-check_brms(is_reactance, log_pp_check = TRUE)
+check_brms(is_reactance)
 
 ```
 
@@ -1172,6 +1179,7 @@ summary_all_models
 ```{r report_system, results='asis'}
 
 report::report_system()
+report::report_packages()
 report::cite_packages()
 
 ```
