updated FINAL scripts

--- a/01_Analysis_Script_FINAL.Rmd
+++ b/01_Analysis_Script_FINAL.Rmd
@@ -50,7 +50,7 @@ system("shutdown /a")
 
 # Set options for analysis
 use_mi = FALSE
-shutdown = FALSE
+shutdown = TRUE
 report_ordinal = FALSE
 
 options(
